# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhmy"
version = "0.1.1"
description = "A library for interacting and working the Harmony blockchain and related codebases"
readme = "README.md"
license = { text = "MIT" }
keywords = [ "Harmony", "blockchain", "protocol", "staking" ]
dependencies = [
    "pexpect",
    "requests",
    "eth-rlp",
    "eth-account >= 0.5.5",
    "eth-utils",
    "hexbytes",
    "cytoolz"
]
requires-python = ">=3.0"

[project.optional-dependencies]
dev = [ "black", "autopep8", "yapf", "twine", "build", "docformatter", "bumpver" ]

[tool.bumpver]
current_version = "0.1.1"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: bump version {old_version} -> {new_version}"
# git commit --amend -S
commit = true
# git tag ${bumpver show -n | head -1 | awk '{print $3}'} -f -s
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"pyhmy/__init__.py" = ['__version__ = "{version}"']

