# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyhmy"
version = "0.1.2"
description = "A library for interacting and working the Harmony blockchain and related codebases"
readme = "README.md"
license = "MIT"
keywords = [ "Harmony", "blockchain", "protocol", "staking" ]
dependencies = [
    "pexpect == 4.9.0",
    "requests == 2.32.4",
    "eth-rlp == 2.2.0",
    "eth-account == 0.13.7",
    "eth-utils == 5.3.0",
    "hexbytes == 1.3.0",
    "cytoolz == 1.0.1"
]
requires-python = ">=3.11.2"

[project.optional-dependencies]
dev = [ "black", "autopep8", "yapf", "twine", "build", "docformatter", "bumpver" ]

[tool.bumpver]
current_version = "0.1.2"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "chore: bump version {old_version} -> {new_version}"
# git commit --amend -S
commit = true
# git tag ${bumpver show -n | head -1 | awk '{print $3}'} -f -s
tag = true
push = false

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
    'version = "{version}"'
]
"pyhmy/__init__.py" = ['__version__ = "{version}"']

