[metadata]
license = MIT
name = pyhmy
keywords = Harmony, blockchain, protocol
description = A library for interacting and working the Harmony blockchain and related codebases.
long_description = file: README.md
long_description_content_type = text/markdown
author = Daniel Van Der Maden
author_email = daniel@harmony.one
url = http://harmony.one/

[options]
packages = find:
use_incremental = True

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

install_requires =
    pexpect
    requests
    incremental
    eth-rlp
    eth-account == 0.5.4
    eth-utils
    hexbytes
    cytoolz

setup_requires =
    incremental
    pytest
    pytest-ordering
    click
    Twisted~=21.7.0
